--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2666,7 +2666,6 @@ b {
   transform: translateY(-50%);
   width: 45px;
   height: 45px;
-  background: url(../assets/eventIcon.png) center center no-repeat, rgba(255, 255, 255, 0.9);
   border-radius: 50%;
   background-size: 29%;
   cursor: pointer;
@@ -2693,9 +2692,9 @@ b {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../assets/eventIcon.png) center center no-repeat, rgba(255, 255, 255, 0.9);
+  background: url(../assets/newIcon.png) center center no-repeat;
   border-radius: 50%;
-  background-size: 28%;
+  background-size: 88%;
 }
 
 @keyframes animateGlow {
