--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2731,7 +2731,7 @@ b{
 
   width: 45px;
   height: 45px;
-  background: url(../assets/eventIcon.png) center center no-repeat, rgba(255, 255, 255, 0.9);
+  //background: url(../assets/eventIcon.png) center center no-repeat, rgba(255, 255, 255, 0.9);
   border-radius: 50%;
   background-size: 29%;
 
@@ -2774,9 +2774,9 @@ b{
 
   width: 100%;
   height: 100%;
-  background: url(../assets/eventIcon.png) center center no-repeat, rgba(255, 255, 255, 0.9);
+  background: url(../assets/newIcon.png) center center no-repeat;
   border-radius: 50%;
-  background-size: 28%;
+  background-size: 88%;
 }
 
 @keyframes animateGlow {
