--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2692,9 +2692,9 @@ b {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../assets/newIcon.png) center center no-repeat;
+  background: url(../assets/blackFriday.png) center center no-repeat;
   border-radius: 50%;
-  background-size: 88%;
+  background-size: 60%;
 }
 
 @keyframes animateGlow {
@@ -2857,7 +2857,7 @@ b {
   }
 
   .eventRules {
-    width: 550px;
+    width: 600px;
   }
 
   .eventRules .levelClosedText {
