--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2774,9 +2774,9 @@ b{
 
   width: 100%;
   height: 100%;
-  background: url(../assets/newIcon.png) center center no-repeat;
+  background: url(../assets/blackFriday.png) center center no-repeat;
   border-radius: 50%;
-  background-size: 88%;
+  background-size: 60%;
 }
 
 @keyframes animateGlow {
@@ -2935,7 +2935,7 @@ b{
     font-size: 1.6rem;
   }
   .eventRules{
-    width: 550px;
+    width: 600px;
   }
   .eventRules .levelClosedText{
     font-size: 2rem;
