--- a/src/styles/stylesLocations.scss
+++ b/src/styles/stylesLocations.scss
@@ -5,7 +5,7 @@
 @import 'fbv';
 @import 'birds';
 @import 'cinema';
-@import 'event';
+//@import 'event';
 @import 'default';
 @import 'farm';
 @import 'halloween';
