--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1133,8 +1133,8 @@ html, body {
   }
 
   .rules__menu {
-    font-size: 3.5rem;
-    line-height: 3.5rem;
+    font-size: 3.1rem;
+    line-height: 3.1rem;
     width: 400px;
     height: 50px;
   }
@@ -2064,7 +2064,6 @@ b {
     width: 100%;
     height: 60px;
     padding: 8px 8px 0 8px;
-    align-items: start;
   }
 
   .levelsTop .switchShowLocation, .levelsTop .leaderBoard {
@@ -2692,9 +2691,8 @@ b {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../assets/blackFriday.png) center center no-repeat;
-  border-radius: 50%;
-  background-size: 60%;
+  background: url(../assets/giftNewYear.png) center center no-repeat;
+  background-size: 100%;
 }
 
 @keyframes animateGlow {
@@ -2794,7 +2792,7 @@ b {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -25px;
+  bottom: -38px;
   color: black;
   background-color: white;
   width: 90%;
@@ -2852,7 +2850,7 @@ b {
   }
 
   .uniqueID {
-    bottom: -40px;
+    bottom: -50px;
     font-size: 1.6rem;
   }
 
@@ -2876,7 +2874,7 @@ b {
 .fullRules a {
   color: #898989 !important;
   font-size: 1.5rem;
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 
 .prizesText, .prizeText {
