--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1190,8 +1190,8 @@ html,body
     height: 70px;
   }
   .rules__menu{
-    font-size: 3.5rem;
-    line-height: 3.5rem;
+    font-size: 3.1rem;
+    line-height: 3.1rem;
 
     width: 400px;
     height: 50px;
@@ -2109,7 +2109,7 @@ b{
     width: 100%;
     height: 60px;
     padding: 8px 8px 0 8px;
-    align-items: start;
+    //align-items: start;
   }
   .levelsTop .switchShowLocation, .levelsTop .leaderBoard{
     display: none;
@@ -2774,9 +2774,9 @@ b{
 
   width: 100%;
   height: 100%;
-  background: url(../assets/blackFriday.png) center center no-repeat;
-  border-radius: 50%;
-  background-size: 60%;
+  background: url(../assets/giftNewYear.png) center center no-repeat;
+  //border-radius: 50%;
+  background-size: 100%;
 }
 
 @keyframes animateGlow {
@@ -2874,7 +2874,7 @@ b{
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -25px;
+  bottom: -38px;
   color: black;
   background-color: white;
 
@@ -2931,7 +2931,7 @@ b{
     font-size: 2rem;
   }
   .uniqueID{
-    bottom: -40px;
+    bottom: -50px;
     font-size: 1.6rem;
   }
   .eventRules{
@@ -2951,7 +2951,7 @@ b{
 .fullRules a{
   color: #898989 !important;
   font-size: 1.5rem;
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 .prizesText, .prizeText{
   color: #c05251;
