--- a/src/styles/stylesNewYear.scss
+++ b/src/styles/stylesNewYear.scss
@@ -132,6 +132,10 @@
   .leaderBoardInfo__player{
     border-color: #E75858;
   }
+  .done-word{
+    color: black;
+    text-shadow: 0 0 8px white;
+  }
 
   @media (orientation: portrait){
     .shop__cart__buy-button{
