--- a/src/styles/stylesBg1.scss
+++ b/src/styles/stylesBg1.scss
@@ -39,7 +39,7 @@
   ::-webkit-scrollbar-thumb {
     background-color: #DE8858;
   }
-  .settings{
+  .settings, .lbInGame__player, .lbInGame__score{
     border-color: #DE8858;
   }
   .checkbox:checked + label:after {
