--- a/src/styles/stylesBg2.scss
+++ b/src/styles/stylesBg2.scss
@@ -29,7 +29,7 @@
   .menu__tip_count, .rules__goBg{
     background-color: #192B6C;
   }
-  .shop, .rules, .leaderBoardInfo_my .leaderBoardInfo__image{
+  .shop, .rules, .leaderBoardInfo_my .leaderBoardInfo__image, .lbInGame__player, .lbInGame__score{
     border-color: #192B6C;
   }
   .shop .rules__menu, .settings__text{
