--- a/src/styles/stylesBg3.scss
+++ b/src/styles/stylesBg3.scss
@@ -42,6 +42,9 @@
   .settings{
     border-color: #39196C;
   }
+  .lbInGame__player, .lbInGame__score{
+    border-color: #A47BCD;
+  }
   .checkbox:checked + label:after {
     background-color: #8769C6;
   }
