--- a/src/styles/stylesCave.scss
+++ b/src/styles/stylesCave.scss
@@ -81,7 +81,7 @@
   .cloudHint__mainText{
     color: #0087C0;
   }
-  .leaderBoardInfo__player{
+  .leaderBoardInfo__player, .lbInGame__player, .lbInGame__score{
     border-color: #0087C0;
   }
 
