--- a/src/styles/stylesHalloween.scss
+++ b/src/styles/stylesHalloween.scss
@@ -82,7 +82,7 @@
   .cloudHint, .cloudHint__mainText{
     color: #3C9BA8;
   }
-  .leaderBoardInfo__player{
+  .leaderBoardInfo__player, .lbInGame__player, .lbInGame__score{
     border-color: #3C9BA8;
   }
   @media (orientation: portrait){
