--- a/src/styles/stylesNewYear.scss
+++ b/src/styles/stylesNewYear.scss
@@ -129,7 +129,7 @@
   .cloudHint__mainText{
     color: #e03f3f;
   }
-  .leaderBoardInfo__player{
+  .leaderBoardInfo__player, .lbInGame__player, .lbInGame__score{
     border-color: #E75858;
   }
   .done-word{
