--- a/src/styles/stylesSpring.scss
+++ b/src/styles/stylesSpring.scss
@@ -70,6 +70,9 @@
   .shop__cart__item{
     border-color: #3A307D;
   }
+  .lbInGame__player, .lbInGame__score{
+    border-color: #6c72f1;
+  }
 
   .wordWas .words__letter{
     background-color: #39307c;
