--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1814,6 +1814,10 @@ b {
   background-image: url(../assets/settings/bg3.png);
 }
 
+.chosenBg4 {
+  background-image: url(../assets/settings/bg4.png);
+}
+
 .changeLeft, .changeRight {
   width: 20px;
   height: 39px;
@@ -2375,7 +2379,7 @@ b {
   margin: 12.5px 10px 0 10px;
   background-color: whitesmoke;
   background-size: cover !important;
-  border: 1px solid black;
+  border: 2px solid #ba6fc6;
   vertical-align: middle;
 }
 
@@ -2390,9 +2394,9 @@ b {
   font-size: 12px;
   color: #2C1345;
   background-color: whitesmoke;
-  border: 1px solid black;
+  border: 2px solid #ba6fc6;
   border-radius: 7px;
-  border-top: none;
+  border-top: none !important;
 }
 
 .lbInGame__score .level_star {
@@ -2691,7 +2695,7 @@ b {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../assets/giftNewYear.png) center center no-repeat;
+  background: url(../assets/heart.png) center center no-repeat;
   background-size: 100%;
 }
 
