--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1865,6 +1865,9 @@ b{
 .chosenBg3{
   background-image: url(../assets/settings/bg3.png);
 }
+.chosenBg4{
+  background-image: url(../assets/settings/bg4.png);
+}
 
 .changeLeft, .changeRight{
   width: 20px;
@@ -2455,7 +2458,7 @@ b{
   background-color: whitesmoke;
   background-size: cover !important;
 
-  border: 1px solid black;
+  border: 2px solid #ba6fc6;
 
   vertical-align: middle;
 }
@@ -2471,9 +2474,9 @@ b{
   font-size: 12px;
   color: #2C1345;
   background-color: whitesmoke;
-  border: 1px solid black;
+  border: 2px solid #ba6fc6;
   border-radius: 7px;
-  border-top: none;
+  border-top: none !important;
 }
 .lbInGame__score .level_star{
   position: absolute;
@@ -2774,7 +2777,7 @@ b{
 
   width: 100%;
   height: 100%;
-  background: url(../assets/giftNewYear.png) center center no-repeat;
+  background: url(../assets/heart.png) center center no-repeat;
   //border-radius: 50%;
   background-size: 100%;
 }
