--- a/src/styles/stylesBg3.css
+++ b/src/styles/stylesBg3.css
@@ -39,6 +39,9 @@
 .chosenAppBg3 .settings {
   border-color: #39196C;
 }
+.chosenAppBg3 .lbInGame__player, .chosenAppBg3 .lbInGame__score {
+  border-color: #A47BCD;
+}
 .chosenAppBg3 .checkbox:checked + label:after {
   background-color: #8769C6;
 }
