--- a/src/styles/stylesLocations.scss
+++ b/src/styles/stylesLocations.scss
@@ -9,6 +9,7 @@
 @import 'default';
 @import 'farm';
 @import 'halloween';
+@import 'valentines';
 
 .locationOpened{
     overflow: auto !important;
