--- a/src/styles/stylesLocations.css
+++ b/src/styles/stylesLocations.css
@@ -800,6 +800,76 @@
     background-size: cover;
   }
 }
+/*День валентина*/
+.gameLocationWrapper-valentines::-webkit-scrollbar-thumb, .levels-wrapper::-webkit-scrollbar-thumb {
+  background-color: #D15784;
+}
+
+.gameLocationWrapper-valentines::-webkit-scrollbar-track {
+  background-color: #e4ecf8;
+  border-radius: 0;
+}
+
+.valentinesLocation .popUp__locationPicture {
+  background-image: url(../assets/locations/valentines/valentines.png);
+}
+
+.valentinesLocation .popUp__locationName {
+  color: #D15784;
+}
+
+.gameLocation-valentines {
+  background: url(../assets/valentines.png) center center no-repeat;
+  background-size: cover;
+}
+.gameLocation-valentines .svgIcon {
+  fill: #D15784;
+}
+.gameLocation-valentines .levelsTop__allStars {
+  color: #D15784;
+}
+.gameLocation-valentines .menu-star, .gameLocation-valentines .newElement {
+  background-color: #c74573;
+}
+.gameLocation-valentines .valentinesProperty {
+  background: url(../assets/valentines.png) center center no-repeat;
+  background-size: cover;
+}
+
+.gameLocationWrapper-valentines {
+  background: url(../assets/valentines.png) center center no-repeat !important;
+  background-size: cover !important;
+}
+
+.location.gameLocation-valentines {
+  background: none;
+}
+
+.gameLocationWrapper-valentines .rules__menu {
+  background-color: #D15784;
+}
+.gameLocationWrapper-valentines .rules .settings__text {
+  color: #D15784;
+}
+.gameLocationWrapper-valentines .rules .svgIcon {
+  fill: #D15784;
+}
+
+.gameLocation-valentines::-webkit-scrollbar-thumb {
+  background-color: #D15784;
+}
+
+@media (min-width: 1000px) {
+  .gameLocation-valentines .location__lastLevel {
+    box-shadow: 0 0 25px 10px #D15784;
+  }
+}
+@media (orientation: portrait) {
+  .gameLocation-valentines, .gameLocation-valentines .valentinesProperty {
+    background: url(../assets/locations/valentines/map_port.png) center center no-repeat;
+    background-size: cover;
+  }
+}
 .locationOpened {
   overflow: auto !important;
 }
