--- a/src/styles/stylesBg2.css
+++ b/src/styles/stylesBg2.css
@@ -12,6 +12,16 @@
 .chosenAppBg2 .svgIcon {
   fill: #192B6C;
 }
+.chosenAppBg2 .shop__cart__card .svgIcon {
+  fill: #127FCF;
+}
+.chosenAppBg2 .shop__cart__card .shop__cart__name {
+  color: #127FCF;
+}
+.chosenAppBg2 .shop__cart__buy-button {
+  background: linear-gradient(264.82deg, #2E68FF 2.88%, #21CAFF 96.18%);
+  box-shadow: 0px 3px 0px #1551D4;
+}
 .chosenAppBg2 .levelsTop__allStars {
   color: #192B6C;
 }
