--- a/src/styles/stylesBg2.scss
+++ b/src/styles/stylesBg2.scss
@@ -14,6 +14,16 @@
   .svgIcon{
     fill: #192B6C;
   }
+  .shop__cart__card .svgIcon{
+    fill: #127FCF;
+  }
+  .shop__cart__card .shop__cart__name{
+    color: #127FCF;
+  }
+  .shop__cart__buy-button{
+    background: linear-gradient(264.82deg, #2E68FF 2.88%, #21CAFF 96.18%);
+    box-shadow: 0px 3px 0px #1551D4;
+  }
   .levelsTop__allStars{
     color: #192B6C;
   }
