--- a/src/styles/stylesBg3.scss
+++ b/src/styles/stylesBg3.scss
@@ -15,6 +15,16 @@
   .svgIcon{
     fill: #47196C;
   }
+  .shop__cart__card .svgIcon{
+    fill: #8C1AE5;
+  }
+  .shop__cart__card .shop__cart__name{
+    color: #8C1AE5;
+  }
+  .shop__cart__buy-button{
+    background: linear-gradient(264.82deg, #882BFF 2.88%, #C004DF 96.18%);
+    box-shadow: 0px 3px 0px #7800B1;
+  }
   .levelsTop__allStars{
     color: #47196C;
   }
