--- a/src/styles/stylesCave.scss
+++ b/src/styles/stylesCave.scss
@@ -9,6 +9,16 @@
   .svgIcon{
     fill: #0D2A4C;
   }
+  .shop__cart__card .svgIcon{
+    fill: #13CCE6;
+  }
+  .shop__cart__card .shop__cart__name{
+    color: #13CCE6;
+  }
+  .shop__cart__buy-button{
+    background: linear-gradient(264.82deg, #2EB4FF 2.88%, #21FFD7 96.18%);
+    box-shadow: 0px 3px 0px #1590D4;
+  }
   .levelsTop__allStars{
     color: #0D2A4C;
   }
