--- a/src/styles/stylesSpring.css
+++ b/src/styles/stylesSpring.css
@@ -7,6 +7,16 @@
 .chosenAppBg-3 .svgIcon {
   fill: #3A307D;
 }
+.chosenAppBg-3 .shop__cart__card .svgIcon {
+  fill: #3F66F2;
+}
+.chosenAppBg-3 .shop__cart__card .shop__cart__name {
+  color: #3F66F2;
+}
+.chosenAppBg-3 .shop__cart__buy-button {
+  background: linear-gradient(264.82deg, #712EFF 2.88%, #217AFF 96.18%);
+  box-shadow: 0px 3px 0px #2515D4;
+}
 .chosenAppBg-3 .levelsTop__allStars {
   color: #3A307D;
 }
