--- a/src/styles/stylesBg3.css
+++ b/src/styles/stylesBg3.css
@@ -12,6 +12,16 @@
 .chosenAppBg3 .svgIcon {
   fill: #47196C;
 }
+.chosenAppBg3 .shop__cart__card .svgIcon {
+  fill: #8C1AE5;
+}
+.chosenAppBg3 .shop__cart__card .shop__cart__name {
+  color: #8C1AE5;
+}
+.chosenAppBg3 .shop__cart__buy-button {
+  background: linear-gradient(264.82deg, #882BFF 2.88%, #C004DF 96.18%);
+  box-shadow: 0px 3px 0px #7800B1;
+}
 .chosenAppBg3 .levelsTop__allStars {
   color: #47196C;
 }
