--- a/src/styles/stylesHalloween.css
+++ b/src/styles/stylesHalloween.css
@@ -12,6 +12,16 @@
 .chosenAppBg-1 .svgIcon {
   fill: #103A4C;
 }
+.chosenAppBg-1 .shop__cart__card .svgIcon {
+  fill: #4AD7AD;
+}
+.chosenAppBg-1 .shop__cart__card .shop__cart__name {
+  color: #4AD7AD;
+}
+.chosenAppBg-1 .shop__cart__buy-button {
+  background: linear-gradient(264.82deg, #08F2C8 2.88%, #27D18A 96.18%);
+  box-shadow: 0px 3px 0px #0E9266;
+}
 .chosenAppBg-1 .levelsTop__allStars {
   color: #103A4D;
 }
