--- a/src/styles/stylesNewYear.css
+++ b/src/styles/stylesNewYear.css
@@ -12,6 +12,16 @@
 .chosenAppBg-2 .svgIcon {
   fill: #C21332;
 }
+.chosenAppBg-2 .shop__cart__card .svgIcon {
+  fill: #4395F5;
+}
+.chosenAppBg-2 .shop__cart__card .shop__cart__name {
+  color: #4395F5;
+}
+.chosenAppBg-2 .shop__cart__buy-button {
+  background: linear-gradient(264.82deg, #3A9DF8 2.88%, #33E0F8 96.18%);
+  box-shadow: 0px 3px 0px #237EE9;
+}
 .chosenAppBg-2 .levelsTop__allStars, .chosenAppBg-2 .shop .rules__menu, .chosenAppBg-2 .settings__text {
   color: #C21332;
 }
