--- a/src/styles/stylesSpring.scss
+++ b/src/styles/stylesSpring.scss
@@ -16,6 +16,16 @@
   .svgIcon{
     fill: #3A307D;
   }
+  .shop__cart__card .svgIcon{
+    fill: #3F66F2;
+  }
+  .shop__cart__card .shop__cart__name{
+    color: #3F66F2;
+  }
+  .shop__cart__buy-button{
+    background: linear-gradient(264.82deg, #712EFF 2.88%, #217AFF 96.18%);
+    box-shadow: 0px 3px 0px #2515D4;
+  }
   .levelsTop__allStars{
     color: #3A307D;
   }
