--- a/src/styles/stylesValentines.scss
+++ b/src/styles/stylesValentines.scss
@@ -9,6 +9,16 @@
   .svgIcon{
     fill: #D15784;
   }
+  .shop__cart__card .svgIcon{
+    fill: #D21AE5;
+  }
+  .shop__cart__card .shop__cart__name{
+    color: #D21AE5;
+  }
+  .shop__cart__buy-button{
+    background: linear-gradient(264.14deg, #C82BFF 9.7%, #E000BC 100.69%);
+    box-shadow: 0px 3px 0px #9900B1;
+  }
   .levelsTop__allStars{
     color: #D15784;
   }
