--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -776,7 +776,7 @@ html, body {
     transform: scale(1);
   }
   50% {
-    transform: scale(5);
+    transform: scale(3);
   }
   100% {
     transform: scale(1);
@@ -889,6 +889,11 @@ html, body {
 
 .tutorialSelected {
   z-index: 10;
+  box-shadow: 0 0 20px white !important;
+}
+
+.newWord.tutorialSelected {
+  box-shadow: none !important;
 }
 
 .words__letter {
@@ -1667,7 +1672,7 @@ b {
 
 .cloudHint {
   position: absolute;
-  top: 50%;
+  top: 45%;
   transform: translateY(-50%);
   right: 10px;
   width: 212px;
@@ -1676,6 +1681,7 @@ b {
   justify-content: center;
   align-items: center;
   text-align: center;
+  flex-wrap: wrap;
   font-size: 1.6rem;
   color: #9C4B94;
   line-height: 2rem;
@@ -1684,6 +1690,27 @@ b {
   background-size: 100%;
   z-index: 10;
   font-family: "Roboto", sans-serif;
+  animation: cloudHintAnimation 1s forwards;
+}
+
+@keyframes cloudHintAnimation {
+  0% {
+    transform: translateY(-50%) scale(0.1);
+  }
+  100% {
+    transform: translateY(-50%) scale(1);
+  }
+}
+.cloudHint::after {
+  content: "";
+  position: absolute;
+  left: -97px;
+  width: 120px;
+  height: 170px;
+  top: 50%;
+  background: url(../assets/sq.png) center center no-repeat;
+  background-size: 100%;
+  transform: translateY(-50%) scaleX(-1);
 }
 
 .cloudHint_wordSelected {
@@ -1708,6 +1735,43 @@ b {
   padding: 2px 10px;
   z-index: 10;
   cursor: pointer;
+}
+
+.switchSoundsTutorial {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+  background: rgba(255, 255, 255, 0.85);
+  outline: none;
+  z-index: 10;
+  cursor: pointer;
+}
+
+.switchSoundsTutorial svg, .switchSoundsTutorial rect {
+  fill: #3A307D !important;
+}
+
+.switchSoundsTutorial path {
+  stroke: #3A307D !important;
+}
+
+@media (min-width: 1000px) {
+  .switchSoundsTutorial {
+    width: 60px;
+    height: 60px;
+  }
+}
+.switchSoundsTutorial:after {
+  position: absolute;
+  content: "";
+  top: -10px;
+  left: -10px;
+  right: -10px;
+  bottom: -10px;
 }
 
 @media (min-width: 1000px) {
@@ -1746,6 +1810,43 @@ b {
     font-size: 2rem;
     padding: 4px 15px;
     border-radius: 15px;
+  }
+
+  .cloudHint::after {
+    width: 200px;
+    height: 285px;
+    left: -162px;
+    top: 47%;
+  }
+}
+.cloudHint__letter {
+  animation: 0.1s 0s 1 opacityAnimation normal both running linear;
+}
+
+.cloudHintBackground {
+  animation: 0.5s opacityAnimation forwards;
+}
+
+@keyframes opacityAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.cloudHint_notShowed {
+  animation: notShowAnimation 0.8s forwards;
+}
+
+@keyframes notShowAnimation {
+  0% {
+    opacity: 1;
+    transform: scale(1) translateY(-50%);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.1) translateY(-50%);
   }
 }
 @media (min-width: 1250px) {
